Scaffolding for OSS 3.28.2 patch release

--- a/calico_versioned_docs/version-3.28/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.28/release-notes/index.mdx
@@ -190,3 +190,15 @@ July 30, 2024
 #### How to update
 
 To update an existing installation of Calico Open Source 3.28, see [the upgrade guides](../operations/upgrading/index.mdx).
+
+### Calico Open Source 3.28.2 bug fix update
+
+September 18, 2024
+
+#### Enhancements
+
+#### Bug fixes
+
+#### How to update
+
+To update an existing installation of Calico Open Source 3.28, see [the upgrade guides](../operations/upgrading/index.mdx).
