--- a/calico/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -17,7 +17,7 @@ Install {{prodname}} to provide both networking and network policy for self-mana
 
 ## Concepts
 
-### {{prodname}} operator
+### {{prodname}} operator _recommended_
 
 {{prodname}} is installed by an operator which manages the installation, upgrade, and general lifecycle of a {{prodname}} cluster. The operator is
 installed directly on the cluster as a Deployment, and is configured through one or more custom Kubernetes API resources.
@@ -95,6 +95,14 @@ The option, **Kubernetes API datastore, more than 50 nodes** provides scaling us
 
 #### Install Calico with Kubernetes API datastore, 50 nodes or less
 
+:::note
+
+This option is maintained for upgrade compatibility but we recommend that new clusters use the operator, which
+will automatically configure {{prodname}} correctly for your cluster size (including deploying the Typha scale-out
+proxy and securing it when necessary).
+
+:::
+
 1. Download the {{prodname}} networking manifest for the Kubernetes API datastore.
 
    ```bash
@@ -119,6 +127,15 @@ The geeky details of what you get:
 />
 
 #### Install Calico with Kubernetes API datastore, more than 50 nodes
+
+:::note
+
+This option is maintained for upgrade compatibility but we recommend that new clusters use the operator to deploy
+Typha (the extra scale-out component included in this manifest) instead of using this method.  The operator deploys
+Typha, autoscales it, and auto-configures mTLS between the per-host agent and Typha for maximum security.  This
+manifest option leaves scaling up to you and, by default, it does not secure Typha's port.
+
+:::
 
 1. Download the {{prodname}} networking manifest for the Kubernetes API datastore.
 
@@ -174,7 +191,9 @@ The geeky details of what you get:
 
 :::note
 
-The **etcd** database is not recommended for new installs. However, it is an option if you are running {{prodname}} as the network plugin for both OpenStack and Kubernetes.
+The **etcd** database is not recommended for new Kubernetes installs; some newer Kubernetes-targeted features (such as Service
+matches in policy) are not supported with the etcd datastore. However, it is an option if you are running
+{{prodname}} as the network plugin for both OpenStack and Kubernetes.
 
 :::
 
