--- a/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/release-notes/index.mdx
@@ -5,6 +5,13 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## September 20, 2024 (version 20.0.1)
+
+### Bug fixes
+
+* Fixed an issue so that guardian picks up refreshed Service Account tokens which caused an issue on some AKS configurations due to a token expiration change.
+
+
 ## September 10, 2024 (version 20.0.0)
 
 ### New features and enhancements
