--- a/calico-enterprise/reference/resources/felixconfig.mdx
+++ b/calico-enterprise/reference/resources/felixconfig.mdx
@@ -171,6 +171,7 @@ spec:
 | dnsLogsFilePerNodeLimit               | Limit on the number of DNS logs that can be emitted within each flush interval. When this limit has been reached, Felix counts the number of unloggable DNS responses within the flush interval, and emits a WARNING log with that count at the same time as it flushes the buffered DNS logs.                                                                                                                                                                                                                                                                                                                                                                                                                                                            | int                                                                | int                                     | `0` (no limit)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | dnsLogsLatency                        | Indicates to include measurements of DNS request/response latency in each DNS log.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | `true`, `false`                                                    | boolean                                 | `true`                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | dnsPolicyMode                         | DNSPolicyMode specifies how DNS policy programming will be handled.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `NoDelay`, `DelayDNSResponse`, `DelayDeniedPacket`                 | [DNSPolicyMode](#dnspolicymode)         | `DelayDeniedPacket`                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| bpfDNSPolicyMode                         | BPFDNSPolicyMode specifies how DNS policy programming will be handled.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | `NoDelay`, `Inline`                 | [BPFDNSPolicyMode](#bpfdnspolicymode)         | `Inline`                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | dnsPolicyNfqueueID                    | DNSPolicyNfqueueID is the NFQUEUE ID to use for DNS Policy re-evaluation when the domains IP hasn't been programmed to ipsets yet. This value can be changed to avoid conflicts with other users of NFQUEUEs. Used when `DNSPolicyMode` is `DelayDeniedPacket`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | 0-65535                                                            | int                                     | `100`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | dnsPolicyNfqueueSize                  | DNSPolicyNfqueueID is the size of the NFQUEUE for DNS policy re-evaluation. This is the maximum number of denied packets that may be queued up pending re-evaluation. Used when `DNSPolicyMode` is `DelayDeniedPacket`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | 0-65535                                                            | int                                     | `100`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | dnsPacketsNfqueueID                   | DNSPacketsNfqueueID is the NFQUEUE ID to use for capturing DNS packets to ensure programming IPSets occurs before the response is released. Used when `DNSPolicyMode` is `DelayDNSResponse`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | 0-65535                                                            | int                                     | `101`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
@@ -303,12 +304,18 @@ failsafeOutboundHostPorts:
 | Value             | Description                                                                                                                                                                                                                                                                                                                   |
 | ----------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | DelayDeniedPacket | Felix delays any denied packet that traversed a policy that included egress domain matches, but did not match. The packet is released after a fixed time, or after the destination IP address was programmed.                                                                                                                 |
-| DelayDNSResponse  | Felix delays any DNS response until related IPSets are programmed. This introduces some latency to all DNS packets (even when no IPSet programming is required), but it ensures policy hit statistics are accurate. This is the recommended setting when you are making use of staged policies or policy rule hit statistics. |
+| DelayDNSResponse  | Felix delays any DNS response until related IPSets are programmed. This introduces some latency to all DNS packets (even when no IPSet programming is required), but it ensures policy hit statistics are accurate. This is the recommended setting when you are making use of staged policies or policy rule hit statistics. A Linux kernel version of 3.13 or greater is required to use `DelayDNSResponse`. For earlier kernel versions, this value is modified to `DelayDeniedPacket`. |
 | NoDelay           | Felix does not introduce any delay to the packets. DNS rules may not have been programmed by the time the first packet traverses the policy rules. Client applications need to handle reconnection attempts if initial connection attempts fail. This may be problematic for some applications or for very low DNS TTLs.      |
 
-On Windows, or when using the eBPF dataplane, this setting is ignored and `NoDelay` is always used.
+On Windows, or when using the eBPF dataplane, this setting is ignored. Windows always uses `NoDelay` while eBPF has its own [BPFDNSPolicyMode](#bpfdnspolicymode) option.
 
-A linux kernel version of 3.13 or greater is required to use `DelayDNSResponse`. For earlier kernel versions, this value is modified to `DelayDeniedPacket`.
+
+### BPFDNSPolicyMode
+
+| Value             | Description                                                                                                                                                                                                                                                                                                                   |
+| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Inline            | Felix does not introduce any delay to any packets. Felix's eBPF programs parse DNS responses and program policy rules immediately, before the DNS response is passed to the application. This only applies to wildcard prefixes: `*.x.y.z` will be processed in this manner, but wildcards such as `x.*.y.z` will not match. A Linux kernel version of 5.17 or greater is required. |
+| NoDelay           | Felix does not introduce any delay to the packets. DNS rules may not have been programmed by the time the first packet traverses the policy rules. Client applications need to handle reconnection attempts if initial connection attempts fail. This may be problematic for some applications or for very low DNS TTLs.       |
 
 ### RouteTableRange
 
